[gd_scene load_steps=5 format=3 uid="uid://33qrbtnnfjbg"]

[ext_resource type="Theme" uid="uid://vxihg5pg2oef" path="res://resources/add_ingredients_menu.tres" id="1_xkksa"]
[ext_resource type="Script" uid="uid://cx8x0vxrvy5q3" path="res://scripts/add_liquor_button.gd" id="2_0dtbj"]
[ext_resource type="Texture2D" uid="uid://c18f5tbtxj21e" path="res://assets/utensils/bottle.png" id="3_s2yxi"]
[ext_resource type="PackedScene" uid="uid://dthjdr2uef2ib" path="res://scenes/flavor_stat_info.tscn" id="4_a6e5i"]

[node name="AddLiquorButton" type="Button"]
custom_minimum_size = Vector2(350, 150)
offset_right = 350.0
offset_bottom = 150.0
size_flags_horizontal = 3
theme = ExtResource("1_xkksa")
script = ExtResource("2_0dtbj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LiquorIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.8533072, 0.3540417, 0, 1)
custom_minimum_size = Vector2(60, 120)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_s2yxi")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LiquorName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Chrono Gin"

[node name="FlavorStatsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FlavorStatIcon" parent="MarginContainer/HBoxContainer/VBoxContainer/FlavorStatsContainer" instance=ExtResource("4_a6e5i")]
layout_mode = 2

[node name="FlavorStatIcon2" parent="MarginContainer/HBoxContainer/VBoxContainer/FlavorStatsContainer" instance=ExtResource("4_a6e5i")]
layout_mode = 2

[node name="FlavorStatIcon3" parent="MarginContainer/HBoxContainer/VBoxContainer/FlavorStatsContainer" instance=ExtResource("4_a6e5i")]
layout_mode = 2
